# Rimoto-Plex-Companion

./: .flake8  .gitignore  .gitmodules  .pylintrc  Rimoto_plex_companion.pyproj  Rimoto_plex_companion.sln  app.py  pyproject.toml  radarr-remote-scanner.userscript.js  readme.md  requirements.txt  rimoto.db  setup.py  sonarr-radarr-remote-scanner.userscript.js  sonarr-remote-scanner.userscript.js  sonarr-remote-scanner2.userscript.js
Rimoto_plex_companion/: .gitignore  __init__.py  add_to_queue.py  app.py  config.py  db_init.py  run.py  scanner.py  server.py  sonarr_to_queue.py
Rimoto_plex_companion/Model/: plex_db.py  rimoto_db.py  selections.py
Rimoto_plex_companion/add_to_db/: __init__.py  db.py
Rimoto_plex_companion/db/: __init__.py
Rimoto_plex_companion/model/: __init__.py
Rimoto_plex_companion/routes/: __init__.py  index.py
Rimoto_plex_companion/server/: __init__.py  rimoto.db
Rimoto_plex_companion/server/templates/: config.html  index.html  layout.html  queue.html
Rimoto_plex_companion/tasks/: __init__.py  scanner.py
Rimoto_plex_companion/templates/: added.html  config.html  layout.html  nav.html  queue.html
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: NavBar.vue
frontend/src/views/: Queue.vue
pip-wheel-metadata/rimoto_plex_companion-0.1.0.dist-info/: METADATA
tests/: test_app.py  test_model.py
userscripts/: radarr-remote-scanner.userscript.js  sonarr-remote-scanner.userscript.js  sonarr-remote-scanner2.userscript.js
