[tool.poetry]
name = "rimoto_plex_companion"
version = "0.1.0"
description = ""
authors = ["Kieran <3812864+MDCEY@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.2"
logzero = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
