[tool.poetry]
name = "rimoto_plex_companion"
version = "0.1.0"
description = ""
authors = ["Kieran <3812864+MDCEY@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
hug = "^2.5"
logzero = "^1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.3"


[tool.poetry.scripts]
serve = "Rimoto_plex_companion:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

