[tool.poetry]
name = "rimoto_plex_companion"
version = "0.1.0"
description = ""
authors = ["Kieran <3812864+MDCEY@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
hug = "^2.5"
logzero = "^1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^5.0"
mypy = "^0.711.0"
flake8 = "^3.7"
coverage = "^4.5"
flake8-bugbear = "^19.3"
bandit = "^1.6"
pydocstyle = "^3.0"


[tool.poetry.scripts]
serve = "Rimoto_plex_companion:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

